--- a/web/general.html
+++ b/web/general.html
@@ -31,7 +31,7 @@
             <p><b>Nom complet:</b>Dwayne Douglas Johnson</p>
             <p><b>Fecha nacimiento:</b> Nacido el 2 de mayo de 1972</p>
             <p><b>Padres:</b>Rocky Johnson y Ata Johnson</p>
-            <p></p>
+            <p><b>Hijos:</b> </p>
 
         </div>
         <footer>
