--- a/web/fotos.html
+++ b/web/fotos.html
@@ -23,6 +23,20 @@
                 </ul>
             </nav>
         </main>
+        <main>
+            <table align="center">
+                <tr>
+                    <td><img src="../img/dwayn1.jpg" alt="dwayne 1" width="330" height="170"></td> 
+                    <td><img src="../img/dwayn2.jpg" alt="dwayne 2" width="330" height="170"></td>
+                    <td><img src="../img/dwayn3.jpg" alt="dwayne 3" width="330" height="170"></td>
+                </tr>
+                <tr>
+                    <td><img src="../img/dwayn5.jpeg" alt="dwayne 5" width="330" height="170"></td> 
+                    <td><img src="../img/dwayn6.jpg" alt="dwayne 6" width="330" height="170"></td>
+                    <td><img src="../img/dwayn7.jpg" alt="dwayne 7" width="330" height="170"></td>
+                </tr>
+            </table>
+        </main>
         <footer>
             <div>&copy;2021-2020 By Joan Sala</div>
             <div>
