--- a/web/videos.html
+++ b/web/videos.html
@@ -5,6 +5,7 @@
         <title>videos</title>
         <meta name="description" content="videos">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="../img/logo.png">
         <!--<link rel="stylesheet" href="">-->
     </head>
     <body>
@@ -23,6 +24,15 @@
                 </ul>
             </nav>
         </main>
+        <main>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/51rWHebscl0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ChiLWi-mBvU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </main>
+        <main>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/TPYVkZg4pFk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/kFIiOaBcobw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </main>
+
         <footer>
             <div>&copy;2021-2020 By Joan Sala</div>
             <div>
