--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <div>&copy;2021-2020 By Joan Sala</div>
             <div>
                 <ul>
-                    <li><a href="#">Instagram</a></li>
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Twiter</a></li>
-                    <li><a href="#">Youtube</a></li>
+                    <li><a href="#" target="_blank">Instagram</a></li>
+                    <li><a href="#" target="_blank">Facebook</a></li>
+                    <li><a href="#" target="_blank">Twiter</a></li>
+                    <li><a href="#" target="_blank">Youtube</a></li>
                 </ul>
             </div>
         </footer>
