--- a/web/agenda.html
+++ b/web/agenda.html
@@ -5,6 +5,7 @@
         <title>agenda</title>
         <meta name="description" content="agenda">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="./../img/logo.png">
         <!--<link rel="stylesheet" href="">-->
     </head>
     <body>
@@ -23,14 +24,48 @@
                 </ul>
             </nav>
         </main>
+        <hr>
+        <main>
+            <table>
+                <thead align="center">
+                    <th>Enero</th>
+                    <th>Febrero</th>
+                    <th>Marzo</th>
+                    <th>Abril</th>
+                    <th>Mayo</th>
+                    <th>Junio</th>
+                    <th>Julio</th>
+                    <th>Agosto</th>
+                    <th>Septiembre</th>
+                    <th>Octubre</th>
+                    <th>Noviembre</th>
+                    <th>Diciembre</th>
+                </thead>
+                <tr align="center">
+                    <td>Fast&Fourius 8</td>
+                    <td>El Sustituto</td>
+                    <td>Impecable</td>
+                    <td>No hay estrenos ni eventos</td>
+                    <td>Evento recaudacion</td>
+                    <td>No hay eventos ni estrenos</td>
+                    <td>Nuevas prendas de merchandising</td>
+                    <td>No ha eventos ni estrenos</td>
+                    <td>Nuevo trailer de Fast&Forurius 9</td>
+                    <td>No hay eventos ni estrenos</td>
+                    <td>No hay eventos ni estrenos</td>
+                    <td>Evento recaudacion niños para navidad</td>
+                </tr>
+            </table>
+        </main>
+        <hr>
         <footer>
             <div>&copy;2021-2020 By Joan Sala</div>
             <div>
                 <ul>
-                    <li><a href="#">Instagram</a></li>
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Twiter</a></li>
-                    <li><a href="#">Youtube</a></li>
+                    <li><a href="#" target="_blank">Instagram</a></li>
+                    <li><a href="#" target="_blank">Facebook</a></li>
+                    <li><a href="#" target="_blank">Twiter</a></li>
+                    <li><a href="#" target="_blank">Youtube</a></li>
                 </ul>
             </div>
         </footer>
