--- a/web/fotos.html
+++ b/web/fotos.html
@@ -5,6 +5,7 @@
         <title>fotos</title>
         <meta name="description" content="fotos">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="./../img/logo.png">
         <!--<link rel="stylesheet" href="">-->
     </head>
     <body>
@@ -41,10 +42,10 @@
             <div>&copy;2021-2020 By Joan Sala</div>
             <div>
                 <ul>
-                    <li><a href="#">Instagram</a></li>
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Twiter</a></li>
-                    <li><a href="#">Youtube</a></li>
+                    <li><a href="#" target="_blank">Instagram</a></li>
+                    <li><a href="#" target="_blank">Facebook</a></li>
+                    <li><a href="#" target="_blank">Twiter</a></li>
+                    <li><a href="#" target="_blank">Youtube</a></li>
                 </ul>
             </div>
         </footer>
