--- a/web/contacte.html
+++ b/web/contacte.html
@@ -6,13 +6,12 @@
         <meta name="description" content="contactes">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="./../img/logo.png">
+            <meta name="keywords" content="">
         <!--<link rel="stylesheet" href="">-->
     </head>
     <body>
         <header>
             <img src="../img/logo.png" alt="logo" width="150" height="150">
-        </header>
-        <main>
             <nav>
                 <ul>
                     <li><a href="../index.html">Inici</a></li>
@@ -23,23 +22,17 @@
                     <li><a href="contacte.html">Contactes</a></li>
                 </ul>
             </nav>
-        </main>
+        </header>
         <main>
             <ul>
                 <li>Nombre <input type="text" value="Nombre completo"></li>
-                <br>
                 <li>Correo electronico <input type="text" value="ejemplo@ejemplo"></li>
-                <br>
                 <li>Fecha de nacimiento <input type="date"></li>
-                <br>
                 <li>Introduze el problema que tenga <input type="text"></li>
-                <br>
                 <li>Enviar <input type="button" value="Submit"></li>
-                <br>
                 <li>Donde encontrarnos</li>
             </ul>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11932.774120274247!2d2.2926007499999996!3d41.60832655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sca!2ses!4v1634477287528!5m2!1sca!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-
         </main>
         <footer>
             <div>&copy;2021-2020 By Joan Sala</div>
