--- a/web/general.html
+++ b/web/general.html
@@ -6,6 +6,7 @@
         <meta name="description" content="web general">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="./../img/logo.png">
+        <meta name="keywords" content="general, dwayne johnson">
         <!--<link rel="stylesheet" href="">-->
     </head>
     <body>
