--- a/web/agenda.html
+++ b/web/agenda.html
@@ -6,6 +6,7 @@
         <meta name="description" content="agenda">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="./../img/logo.png">
+        <meta name="keywords" content="agenda, dwayne Jhonson">
         <!--<link rel="stylesheet" href="">-->
     </head>
     <body>
