--- a/web/contacte.html
+++ b/web/contacte.html
@@ -6,7 +6,7 @@
         <meta name="description" content="contactes">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="./../img/logo.png">
-            <meta name="keywords" content="">
+        <meta name="keywords" content="contactes, dwayne johnson">
         <!--<link rel="stylesheet" href="">-->
     </head>
     <body>
