--- a/web/fotos.html
+++ b/web/fotos.html
@@ -6,6 +6,7 @@
         <meta name="description" content="fotos">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="./../img/logo.png">
+        <meta name="keywords" content="fotos, dwayne jonhson" >
         <!--<link rel="stylesheet" href="">-->
     </head>
     <body>
