--- a/web/contacte.html
+++ b/web/contacte.html
@@ -24,14 +24,17 @@
             </nav>
         </header>
         <main>
-            <ul>
-                <li>Nombre <input type="text" value="Nombre completo"></li>
-                <li>Correo electronico <input type="text" value="ejemplo@ejemplo"></li>
-                <li>Fecha de nacimiento <input type="date"></li>
-                <li>Introduze el problema que tenga <input type="text"></li>
-                <li>Enviar <input type="button" value="Submit"></li>
-                <li>Donde encontrarnos</li>
-            </ul>
+            <form action="./../carpeta_php/form.php" method="post">
+                <ul>
+                    <li>Nombre <input type="text" placeholder="Nombre completo" name="user"></li>
+                    <li>Correo electronico <input type="text" placeholder="ejemplo@ejemplo" name="correo"></li>
+                    <li>Fecha de nacimiento <input type="date" name="date"></li>
+                    <li>Introduze el problema que tenga <input type="text" name="problem"></li>
+                    <li>Enviar <input type="submit" value="login"></li>
+                    <li>Donde encontrarnos</li>
+                </ul>
+            </form>
+            <br>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11932.774120274247!2d2.2926007499999996!3d41.60832655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sca!2ses!4v1634477287528!5m2!1sca!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </main>
         <footer>
