--- a/web/contacte.html
+++ b/web/contacte.html
@@ -27,7 +27,7 @@
             <form action="./../carpeta_php/form.php" method="post">
                 <ul>
                     <li>Nombre <input type="text" placeholder="Nombre completo" name="user"></li>
-                    <li>Correo electronico <input type="text" placeholder="ejemplo@ejemplo" name="correo"></li>
+                    <li>Correo electronico <input type="email" placeholder="ejemplo@ejemplo" name="correo"></li>
                     <li>Fecha de nacimiento <input type="date" name="date"></li>
                     <li>Introduze el problema que tenga <input type="text" name="problem"></li>
                     <li>Enviar <input type="submit" value="login"></li>
