--- a/web/contacte.html
+++ b/web/contacte.html
@@ -29,9 +29,9 @@
                     <li>Nombre <input type="text" placeholder="Nombre completo" name="user"></li>
                     <li>Correo electronico <input type="email" placeholder="ejemplo@ejemplo" name="correo"></li>
                     <li>Fecha de nacimiento <input type="date" name="date"></li>
-                    <li>Introduze el problema que tenga <input type="text" name="problem"></li>
+                    <li>Escriba el problema:</li>
+                    <textarea name="textarea"  cols="30" rows="10"></textarea>
                     <li>Enviar <input type="submit" value="login"></li>
-                    <li>Donde encontrarnos</li>
                 </ul>
             </form>
             <br>
