--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="./img/logo.png">
         <meta name="keywords" content="idex, dwayne johnson">
+        <link rel="stylesheet" type="text/css" href="./css/hoja.css">
         <!--<link rel="stylesheet" href="">-->
     </head>
     <body>
