--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
         <!--<link rel="stylesheet" href="">-->
     </head>
     <body>
-        <header>
-            <img src="./img/logo.png" alt="logo" width="150" height="150">
-        </header>
-        <main>
+        <header id="header1">
+            <img src="./img/logo.png" class="logo" alt="logo">
             <nav>
-                <ul>
+                <ul class="nav">
                     <li><a href="index.html">Inici</a></li>
                     <li><a href="./web/general.html">General</a></li>
                     <li><a href="./web/fotos.html">Fotos</a></li>
@@ -25,8 +23,9 @@
                     <li><a href="./web/contacte.html">Contactes</a></li>
                 </ul>
             </nav>
-        </main>
-        <div>
+        </header>
+
+        <div class="fotocompleta">
             <img src="./img/fotocompleta.jpg" alt="foto de dwayne jhonson" width="450" height="600" >
         </div>
         <div>
