--- a/index.html
+++ b/index.html
@@ -7,21 +7,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="./img/logo.png">
         <meta name="keywords" content="idex, dwayne johnson">
-        <link rel="stylesheet" type="text/css" href="./css/hoja.css">
+        <link rel="stylesheet" type="text/css" href="./css/common.css">
         <!--<link rel="stylesheet" href="">-->
     </head>
     <body>
-        <header id="header1">
-            <img src="./img/logo.png" class="logo" alt="logo">
+        <header>
             <nav>
-                <ul class="nav">
-                    <li><a href="index.html">Inici</a></li>
-                    <li><a href="./web/general.html">General</a></li>
-                    <li><a href="./web/fotos.html">Fotos</a></li>
-                    <li><a href="./web/videos.html">Videos</a></li>
-                    <li><a href="./web/agenda.html">Agenda</a></li>
-                    <li><a href="./web/contacte.html">Contactes</a></li>
-                </ul>
+                <div class="logoprincipal">
+                    <img src="./img/logo.png" class="logodwayne" alt="logo">
+                </div>
+                <div class="menu">
+                    <ul>
+                        <li><a href="index.html">Inici</a></li>
+                        <li><a href="./web/general.html">General</a></li>
+                        <li><a href="./web/fotos.html">Fotos</a></li>
+                        <li><a href="./web/videos.html">Videos</a></li>
+                        <li><a href="./web/agenda.html">Agenda</a></li>
+                        <li><a href="./web/contacte.html">Contactes</a></li>
+                    </ul>
+                </div>
             </nav>
         </header>
 
