--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="./img/logo.png">
         <meta name="keywords" content="idex, dwayne johnson">
-        <link rel="stylesheet" type="text/css" href="./css/common.css">
+        <link rel="stylesheet" type="text/css" href="./css/index.css">
         <!--<link rel="stylesheet" href="">-->
     </head>
     <body>
         <header>
             <nav>
-                <div class="logoprincipal">
-                    <img src="./img/logo.png" class="logodwayne" alt="logo">
-                </div>
+                <!--<div class="logoprincipal">
+                    <img src="./img/Dwayne The Rock Johnson.png" class="logodwayne" alt="logo">
+                </div>-->
                 <div class="menu">
                     <ul>
                         <li><a href="index.html">Inici</a></li>
@@ -29,20 +29,20 @@
             </nav>
         </header>
 
-        <div class="fotocompleta">
-            <img src="./img/fotocompleta.jpg" alt="foto de dwayne jhonson" width="450" height="600" >
+        <div>
+            <img src="./img/fotocompleta.jpg" alt="foto de dwayne jhonson" class="fotodwayne">
         </div>
         <div>
-            <iframe  src="https://www.20minutos.es/cinemania/minuteca/dwayne-johnson/" frameborder="1" width="540" height="600"  ></iframe>
+            <iframe  src="https://www.20minutos.es/cinemania/minuteca/dwayne-johnson/" frameborder="1" class="iframenoticias" ></iframe>
         </div>
         <footer>
-            <div>&copy;2021-2020 By Joan Sala</div>
-            <div>
+            <div class="spam">&copy;2021-2020 By Joan Sala</div>
+            <div class="redessociales">
                 <ul>
-                    <li><a href="#" target="_blank">Instagram</a></li>
-                    <li><a href="#" target="_blank">Facebook</a></li>
-                    <li><a href="#" target="_blank">Twiter</a></li>
-                    <li><a href="#" target="_blank">Youtube</a></li>
+                    <li><a href="https://www.instagram.com/therock/" target="_blank" class="instagram">Instagram</a></li>
+                    <li><a href="https://www.facebook.com/DwayneJohnson" target="_blank" class="facebook">Facebook</a></li>
+                    <li><a href="https://twitter.com/TheRock" target="_blank" class="twitter">Twitter</a></li>
+                    <li><a href="https://www.youtube.com/results?search_query=therock" target="_blank" class="youtube">Youtube</a></li>
                 </ul>
             </div>
         </footer>
