--- a/web/agenda.html
+++ b/web/agenda.html
@@ -13,17 +13,17 @@
     <body>
         <header>
             <nav>
-                <div class="logoprincipal">
-                    <img src="../img/logo.png" class="logodwayne" alt="logo">
-                </div>
+                <!--<div class="logoprincipal">
+                    <img src="./img/Dwayne The Rock Johnson.png" class="logodwayne" alt="logo">
+                </div>-->
                 <div class="menu">
                     <ul>
                         <li><a href="../index.html">Inici</a></li>
-                        <li><a href="../web/general.html">General</a></li>
-                        <li><a href="../web/fotos.html">Fotos</a></li>
-                        <li><a href="../web/videos.html">Videos</a></li>
-                        <li><a href="../web/agenda.html">Agenda</a></li>
-                        <li><a href="../web/contacte.html">Contactes</a></li>
+                        <li><a href="./general.html">General</a></li>
+                        <li><a href="./fotos.html">Fotos</a></li>
+                        <li><a href="./videos.html">Videos</a></li>
+                        <li><a href="./agenda.html">Agenda</a></li>
+                        <li><a href="./contacte.html">Contactes</a></li>
                     </ul>
                 </div>
             </nav>
