--- a/web/general.html
+++ b/web/general.html
@@ -7,42 +7,49 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="./../img/logo.png">
         <meta name="keywords" content="general, dwayne johnson">
+        <link rel="stylesheet" type="text/css" href="../css/common.css">
         <!--<link rel="stylesheet" href="">-->
     </head>
     <body>
         <header>
-            <img src="../img/logo.png" alt="logo" width="150" height="150">
-        </header>
-        <main>
             <nav>
-                <ul>
-                    <li><a href="../index.html">Inici</a></li>
-                    <li><a href="general.html">General</a></li>
-                    <li><a href="fotos.html">Fotos</a></li>
-                    <li><a href="videos.html">Videos</a></li>
-                    <li><a href="agenda.html">Agenda</a></li>
-                    <li><a href="contacte.html">Contactes</a></li>
-                </ul>
+                <!--<div class="logoprincipal">
+                    <img src="./img/Dwayne The Rock Johnson.png" class="logodwayne" alt="logo">
+                </div>-->
+                <div class="menu">
+                    <ul>
+                        <li><a href="../index.html">Inici</a></li>
+                        <li><a href="./general.html">General</a></li>
+                        <li><a href="./fotos.html">Fotos</a></li>
+                        <li><a href="./videos.html">Videos</a></li>
+                        <li><a href="./agenda.html">Agenda</a></li>
+                        <li><a href="./contacte.html">Contactes</a></li>
+                    </ul>
+                </div>
             </nav>
-        </main>
+        </header>
         <div>
-            <p><h1>Dwayne Johnson</h1></p>
+            <img src="../img/police.png" alt="dwaynepolicia">
         </div>
         <div>
-            <p><b>Nom complet:</b>Dwayne Douglas Johnson</p>
-            <p><b>Fecha nacimiento:</b> Nacido el 2 de mayo de 1972</p>
-            <p><b>Padres:</b>Rocky Johnson y Ata Johnson</p>
-            <p><b>Hijos:</b>Simone, Jasmine y Tiana </p>
-            <p>
-                El éxito de Johnson en el cuadrilátero, le permitió llegar a la popularidad, apareciendo como invitado en la canción "It Doesn't Matter" (que es una de las frases favoritas de The Rock y del cantante de R&B Wyclef Jean), apareció también en el vídeo para la canción.
+            <div>
+                <p><h1>Dwayne Johnson</h1></p>
+            </div>
+            <div>
+                <p><b>Nom complet:</b>Dwayne Douglas Johnson</p>
+                <p><b>Fecha nacimiento:</b> Nacido el 2 de mayo de 1972</p>
+                <p><b>Padres:</b>Rocky Johnson y Ata Johnson</p>
+                <p><b>Hijos:</b>Simone, Jasmine y Tiana </p>
+                <p>
+                    El éxito de Johnson en el cuadrilátero, le permitió llegar a la popularidad, apareciendo como invitado en la canción "It Doesn't Matter" (que es una de las frases favoritas de The Rock y del cantante de R&B Wyclef Jean), apareció también en el vídeo para la canción.
 
-                <br>Ese mismo año participó como invitado en el programa Saturday Night Live, presentando a sus compañeros de lucha Triple H, The Big Show, y Mick Foley. Según Johnson, el éxito del capítulo causó que comenzara a recibir ofertas de los estudios de Hollywood.
+                    <br>Ese mismo año participó como invitado en el programa Saturday Night Live, presentando a sus compañeros de lucha Triple H, The Big Show, y Mick Foley. Según Johnson, el éxito del capítulo causó que comenzara a recibir ofertas de los estudios de Hollywood.
 
-                <br> Participó como actor invitado en las series de televisión Star Trek: Voyager y That '70s Show. Su primera aparición cinematográfica fue una breve aparición en el filme The Mummy Returns, el éxito de taquilla de este, conllevó a una precuela, El rey Escorpión, donde obtuvo el papel principal. Su siguiente trabajo habría sido en el proyecto de largometraje Johnny Bravo, pero la producción se suspendió.
+                    <br> Participó como actor invitado en las series de televisión Star Trek: Voyager y That '70s Show. Su primera aparición cinematográfica fue una breve aparición en el filme The Mummy Returns, el éxito de taquilla de este, conllevó a una precuela, El rey Escorpión, donde obtuvo el papel principal. Su siguiente trabajo habría sido en el proyecto de largometraje Johnny Bravo, pero la producción se suspendió.
 
-                <br> Desde su retiro de WWE en 2004, dejó la lucha y se concentró en su carrera cinematográfica. Sin embargo su empresa continuó vendiendo productos de la marca The Rock y Johnson suele aparecer en las presentaciones de sus programas de televisión.
-            </p>
-
+                    <br> Desde su retiro de WWE en 2004, dejó la lucha y se concentró en su carrera cinematográfica. Sin embargo su empresa continuó vendiendo productos de la marca The Rock y Johnson suele aparecer en las presentaciones de sus programas de televisión.
+                </p>
+            </div>  
         </div>
         <footer>
             <div>&copy;2021-2020 By Joan Sala</div>
