--- a/web/contacte.html
+++ b/web/contacte.html
@@ -7,20 +7,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="./../img/logo.png">
         <meta name="keywords" content="contactes, dwayne johnson">
+        <link rel="stylesheet" type="text/css" href="../css/common.css">
         <!--<link rel="stylesheet" href="">-->
     </head>
     <body>
         <header>
-            <img src="../img/logo.png" alt="logo" width="150" height="150">
             <nav>
-                <ul>
-                    <li><a href="../index.html">Inici</a></li>
-                    <li><a href="general.html">General</a></li>
-                    <li><a href="fotos.html">Fotos</a></li>
-                    <li><a href="videos.html">Videos</a></li>
-                    <li><a href="agenda.html">Agenda</a></li>
-                    <li><a href="contacte.html">Contactes</a></li>
-                </ul>
+                <!--<div class="logoprincipal">
+                    <img src="./img/Dwayne The Rock Johnson.png" class="logodwayne" alt="logo">
+                </div>-->
+                <div class="menu">
+                    <ul>
+                        <li><a href="../index.html">Inici</a></li>
+                        <li><a href="./general.html">General</a></li>
+                        <li><a href="./fotos.html">Fotos</a></li>
+                        <li><a href="./videos.html">Videos</a></li>
+                        <li><a href="./agenda.html">Agenda</a></li>
+                        <li><a href="./contacte.html">Contactes</a></li>
+                    </ul>
+                </div>
             </nav>
         </header>
         <main>
