--- a/web/general.html
+++ b/web/general.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="./../img/logo.png">
         <meta name="keywords" content="general, dwayne johnson">
-        <link rel="stylesheet" type="text/css" href="../css/common.css">
+        <link rel="stylesheet" type="text/css" href="../css/general.css">
         <!--<link rel="stylesheet" href="">-->
     </head>
     <body>
@@ -28,14 +28,14 @@
                 </div>
             </nav>
         </header>
-        <div>
+        <div class="imagendwayne">
             <img src="../img/police.png" alt="dwaynepolicia">
         </div>
-        <div>
-            <div>
+        <div class="Informaciondwayne">
+            <div class="info">
                 <p><h1>Dwayne Johnson</h1></p>
             </div>
-            <div>
+            <div class="info">
                 <p><b>Nom complet:</b>Dwayne Douglas Johnson</p>
                 <p><b>Fecha nacimiento:</b> Nacido el 2 de mayo de 1972</p>
                 <p><b>Padres:</b>Rocky Johnson y Ata Johnson</p>
@@ -52,13 +52,13 @@
             </div>  
         </div>
         <footer>
-            <div>&copy;2021-2020 By Joan Sala</div>
-            <div>
+            <div class="spam">&copy;2021-2020 By Joan Sala</div>
+            <div class="redessociales">
                 <ul>
-                    <li><a href="#" target="_blank">Instagram</a></li>
-                    <li><a href="#" target="_blank">Facebook</a></li>
-                    <li><a href="#" target="_blank">Twiter</a></li>
-                    <li><a href="#" target="_blank">Youtube</a></li>
+                    <li><a href="https://www.instagram.com/therock/" target="_blank" class="instagram">Instagram</a></li>
+                    <li><a href="https://www.facebook.com/DwayneJohnson" target="_blank" class="facebook">Facebook</a></li>
+                    <li><a href="https://twitter.com/TheRock" target="_blank" class="twitter">Twitter</a></li>
+                    <li><a href="https://www.youtube.com/results?search_query=therock" target="_blank" class="youtube">Youtube</a></li>
                 </ul>
             </div>
         </footer>
