--- a/web/agenda.html
+++ b/web/agenda.html
@@ -7,15 +7,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="./../img/logo.png">
         <meta name="keywords" content="agenda, dwayne Jhonson">
-        <link rel="stylesheet" type="text/css" href="../css/common.css">
+        <link rel="stylesheet" type="text/css" href="../css/agenda.css">
         <!--<link rel="stylesheet" href="">-->
     </head>
     <body>
         <header>
             <nav>
-                <!--<div class="logoprincipal">
-                    <img src="./img/Dwayne The Rock Johnson.png" class="logodwayne" alt="logo">
-                </div>-->
                 <div class="menu">
                     <ul>
                         <li><a href="../index.html">Inici</a></li>
@@ -28,30 +25,35 @@
                 </div>
             </nav>
         </header>
-        <hr>
         <main>
-            <table>
-                <thead align="center">
+            <table id="tablauna">
+                <thead>
                     <th>Enero</th>
                     <th>Febrero</th>
                     <th>Marzo</th>
                     <th>Abril</th>
                     <th>Mayo</th>
                     <th>Junio</th>
-                    <th>Julio</th>
+                </thead>
+                <tr>
+                    <td>Estreno: Fast&Fourius 8</td>
+                    <td>Estreno: El Sustituto</td>
+                    <td>Estreno: Impecable</td>
+                    <td>No hay estrenos ni eventos</td>
+                    <td>Evento recaudacion</td>
+                    <td>No hay eventos ni estrenos</td>
+                </tr>
+            </table>
+            <table id="tablados">
+                <thead>
+                    <th>Julio</th> <!---->
                     <th>Agosto</th>
                     <th>Septiembre</th>
                     <th>Octubre</th>
                     <th>Noviembre</th>
                     <th>Diciembre</th>
                 </thead>
-                <tr align="center">
-                    <td>Fast&Fourius 8</td>
-                    <td>El Sustituto</td>
-                    <td>Impecable</td>
-                    <td>No hay estrenos ni eventos</td>
-                    <td>Evento recaudacion</td>
-                    <td>No hay eventos ni estrenos</td>
+                <tr>
                     <td>Nuevas prendas de merchandising</td>
                     <td>No ha eventos ni estrenos</td>
                     <td>Nuevo trailer de Fast&Forurius 9</td>
@@ -59,17 +61,17 @@
                     <td>No hay eventos ni estrenos</td>
                     <td>Evento recaudacion niños para navidad</td>
                 </tr>
-            </table>
+            </table>            
         </main>
-        <hr>
+        
         <footer>
-            <div>&copy;2021-2020 By Joan Sala</div>
-            <div>
+            <div class="spam">&copy;2021-2020 By Joan Sala</div>
+            <div class="redessociales">
                 <ul>
-                    <li><a href="#" target="_blank">Instagram</a></li>
-                    <li><a href="#" target="_blank">Facebook</a></li>
-                    <li><a href="#" target="_blank">Twiter</a></li>
-                    <li><a href="#" target="_blank">Youtube</a></li>
+                    <li><a href="https://www.instagram.com/therock/" target="_blank" class="instagram">Instagram</a></li>
+                    <li><a href="https://www.facebook.com/DwayneJohnson" target="_blank" class="facebook">Facebook</a></li>
+                    <li><a href="https://twitter.com/TheRock" target="_blank" class="twitter">Twitter</a></li>
+                    <li><a href="https://www.youtube.com/results?search_query=therock" target="_blank" class="youtube">Youtube</a></li>
                 </ul>
             </div>
         </footer>
