--- a/web/fotos.html
+++ b/web/fotos.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="./../img/logo.png">
         <meta name="keywords" content="fotos, dwayne jonhson" >
-        <link rel="stylesheet" type="text/css" href="../css/common.css">
+        <link rel="stylesheet" type="text/css" href="../css/fotos.css">
         <!--<link rel="stylesheet" href="">-->
     </head>
     <body>
@@ -28,28 +28,31 @@
                 </div>
             </nav>
         </header>
-        <main>
-            <table align="center">
+        <div class="tabla">
+            <table>
                 <tr>
-                    <td><img src="../img/dwayn1.jpg" alt="dwayne 1" width="330" height="170"></td> 
-                    <td><img src="../img/dwayn2.jpg" alt="dwayne 2" width="330" height="170"></td>
-                    <td><img src="../img/dwayn3.jpg" alt="dwayne 3" width="330" height="170"></td>
+                    <td><img src="../img/dwayne-johnson.r_d.354-166.jpeg" alt="dwayne 1" ></td> 
+                    <td><img src="../img/f608x342-7737_37460_0.jpg" alt="dwayne 2" ></td>
+                    <td><img src="../img/dwayn3.jpg" alt="dwayne 3" ></td>
                 </tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
                 <tr>
-                    <td><img src="../img/dwayn5.jpeg" alt="dwayne 5" width="330" height="170"></td> 
-                    <td><img src="../img/dwayn6.jpg" alt="dwayne 6" width="330" height="170"></td>
-                    <td><img src="../img/dwayn7.jpg" alt="dwayne 7" width="330" height="170"></td>
+                    <td><img src="../img/dwayn5.jpeg" alt="dwayne 5" ></td> 
+                    <td><img src="../img/dwayn6.jpg" alt="dwayne 6" ></td>
+                    <td><img src="../img/dwayn7.jpg" alt="dwayne 7" ></td>
                 </tr>
             </table>
-        </main>
+        </div>
         <footer>
-            <div>&copy;2021-2020 By Joan Sala</div>
-            <div>
+            <div class="spam">&copy;2021-2020 By Joan Sala</div>
+            <div class="redessociales">
                 <ul>
-                    <li><a href="#" target="_blank">Instagram</a></li>
-                    <li><a href="#" target="_blank">Facebook</a></li>
-                    <li><a href="#" target="_blank">Twiter</a></li>
-                    <li><a href="#" target="_blank">Youtube</a></li>
+                    <li><a href="https://www.instagram.com/therock/" target="_blank" class="instagram">Instagram</a></li>
+                    <li><a href="https://www.facebook.com/DwayneJohnson" target="_blank" class="facebook">Facebook</a></li>
+                    <li><a href="https://twitter.com/TheRock" target="_blank" class="twitter">Twitter</a></li>
+                    <li><a href="https://www.youtube.com/results?search_query=therock" target="_blank" class="youtube">Youtube</a></li>
                 </ul>
             </div>
         </footer>
