--- a/web/videos.html
+++ b/web/videos.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="./../img/logo.png">
         <meta name="keywords" content="videos, dwayne johnson">
-        <link rel="stylesheet" type="text/css" href="../css/common.css">
+        <link rel="stylesheet" type="text/css" href="../css/videos.css">
         <!--<link rel="stylesheet" href="">-->
     </head>
     <body>
@@ -28,23 +28,26 @@
                 </div>
             </nav>
         </header>
-        <main>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/51rWHebscl0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/ChiLWi-mBvU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </main>
-        <main>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/TPYVkZg4pFk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/kFIiOaBcobw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </main>
+        <div class="videos">
+            <main>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/51rWHebscl0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/sH0gzen3z4k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </main>
+            <main>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/TPYVkZg4pFk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/kFIiOaBcobw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </main> 
+        </div>
+
 
         <footer>
-            <div>&copy;2021-2020 By Joan Sala</div>
-            <div>
+            <div class="spam">&copy;2021-2020 By Joan Sala</div>
+            <div class="redessociales">
                 <ul>
-                    <li><a href="#" target="_blank">Instagram</a></li>
-                    <li><a href="#" target="_blank">Facebook</a></li>
-                    <li><a href="#" target="_blank">Twiter</a></li>
-                    <li><a href="#" target="_blank">Youtube</a></li>
+                    <li><a href="https://www.instagram.com/therock/" target="_blank" class="instagram">Instagram</a></li>
+                    <li><a href="https://www.facebook.com/DwayneJohnson" target="_blank" class="facebook">Facebook</a></li>
+                    <li><a href="https://twitter.com/TheRock" target="_blank" class="twitter">Twitter</a></li>
+                    <li><a href="https://www.youtube.com/results?search_query=therock" target="_blank" class="youtube">Youtube</a></li>
                 </ul>
             </div>
         </footer>
